--- a/Lib/PHPMailer/src/composer.json
+++ b/Lib/PHPMailer/src/composer.json
@@ -1,4 +1,6 @@
+
 {
+    "phpmailer/phpmailer": "^6.7.1",
     "name": "phpmailer/phpmailer",
     "type": "library",
     "description": "PHPMailer is a full-featured email creation and transfer class for PHP",
